# payment-service

./: .env.example  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: linter.yml  test.yml
backend/: Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/common/: admin.py  apps.py
backend/config/: celery.py  routers.py  settings.py  urls.py
backend/payouts/: apps.py  constants.py  tasks.py  validators.py
backend/payouts/admin/: __init__.py  currency.py  payout.py
backend/payouts/docs/: __init__.py  payout.py
backend/payouts/migrations/: 0001_initial.py
backend/payouts/models/: __init__.py  currency.py  payout.py
backend/payouts/serializers/: __init__.py  payout.py
backend/payouts/viewsets/: __init__.py  payout.py
backend/tests/payouts/: factories.py  test_viewsets.py
backend/users/: admin.py  apps.py  models.py
backend/users/management/commands/: create_admin.py
backend/users/migrations/: 0001_initial.py
